# jobs-sg

./: .gitignore  README.md  prompt.md  pyproject.toml
.github/workflows/: deploy-pages.yml
scripts/: build_descriptions.py  build_site_data.py  make_prompt.py  parse_wages.py  score.py
site/: data.json  index.html
tests/: test_build_descriptions.py  test_build_site_data.py  test_make_prompt.py  test_parse_wages.py  test_score.py
