[project]
name = "jobs-sg"
version = "0.1.0"
description = "AI Exposure of the Singapore Job Market"
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "httpx>=0.27",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "pytest",
    "pytest-cov",
]

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=scripts --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["scripts"]

[tool.coverage.report]
exclude_lines = [
    "if __name__",
    "pragma: no cover",
]
